# jobs-actions

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-runner-image.yml  test.yml
dispatcher/: .env.example  Dockerfile  README.md  __init__.py  app.py  config.py  flavors.py  github_app.py  hf_jobs.py  requirements.txt  runner_bootstrap.py
dispatcher/tests/: conftest.py  helpers.py  test_app.py  test_flavors.py  test_github_app.py  test_hf_jobs.py
runner/: Dockerfile  Dockerfile.gpu  README.md  entrypoint.sh
setup/: SETUP.md  app-manifest.json  create-app.html
