[project]
name = "jobs-actions-dispatcher"
version = "0.1.0"
description = "Run GitHub Actions on Hugging Face Jobs"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Hugging Face" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "huggingface_hub>=1.0",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["dispatcher"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["dispatcher"]
testpaths = ["dispatcher/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
